# geosphere3d

./: README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/geosphere3d/: __init__.py  __main__.py
src/geosphere3d/compliance/: __init__.py  audit.py  geo_check.py
src/geosphere3d/core/: converter.py  project.py  validator.py
tests/: conftest.py  test_all.py
